Fix form actions alignment.

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -1189,7 +1189,6 @@ input:focus, textarea:focus {
 .form-horizontal .form-actions, .form-vertical .form-actions, .form-inline .form-actions {
     background: #333 url('../images/dark-panel-tile.png');
     border-color: #393939;
-    text-align: right;
 }
 .form-horizontal input[type=text],
 .form-horizontal input[type=password],
